ingress/ingerss-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: critical-space
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30080
      name: http
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
  selector:
    name: ingress-wear-watch
