ingress/ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch
  namespace: critical-space
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: wear-service
              servicePort: 8080
            path: /wear
            pathType: ImplementationSpecific
          - backend:
              serviceName: video-service
              servicePort: 8080
            path: /watch
            pathType: ImplementationSpecific
